Also change opacity to resolve contrast issue

--- a/arches/app/media/css/accessibility.css
+++ b/arches/app/media/css/accessibility.css
@@ -126,6 +126,10 @@ a:focus,
     color: #595959;
 }
 
+.pagination .disabled > a {
+    opacity: 1;
+}
+
 .btn-profile-password {
     color: #1b4f7d;
 }
